syntax = "proto3";

package cluster;

option go_package = "grpcserver/protos/cluster";

service Cluster {
    rpc InitMyCluster(InitMyClusterRequest) returns (ResponseMessage);
    rpc InitOtherCluster(InitOtherClusterRequest) returns (ResponseMessage);
    rpc UpdateMyCluster(UpdateMyClusterRequest) returns (ResponseMessage);
    rpc UpdateOtherCluster(UpdateOtherClusterRequest) returns (ResponseMessage);
    rpc RequestClusterScheduling(ClusterSchedulingRequest) returns (ClusterSchedulingResponse);
}

message RequestMessage {
    string node_name = 1;
    int64 node_score = 2;
    int64 gpu_count = 3;
}

message ResponseMessage {
    bool success = 1;
}

message InitMyClusterRequest {
    repeated RequestMessage request_message = 1;
}   

message InitOtherClusterRequest {
    string cluster_name = 1;
    repeated RequestMessage request_message = 2;
}

message UpdateMyClusterRequest {
    RequestMessage request_message = 1;
}   

message UpdateOtherClusterRequest {
    string cluster_name = 1;
    RequestMessage request_message = 2;
}

message ClusterSchedulingRequest {
    int64 gpu_count = 1;
    repeated string filtered_cluster = 2;
}

message ClusterSchedulingResponse {
    string cluster_name = 1;
    bool success = 2;
}